@@ -20,7 +20,7 @@ package org.codehaus.groovy.runtime.m12n
 
 import org.codehaus.groovy.runtime.DefaultGroovyStaticMethods
 
-public class ExtensionModuleHelperForTests {
+class ExtensionModuleHelperForTests {
     static void doInFork(String code) {
         doInFork("GroovyTestCase", code)
     }
@@ -40,7 +40,7 @@ public class ExtensionModuleHelperForTests {
         Set<String> cp = System.getProperty("java.class.path").split(File.pathSeparator) as Set
         cp << baseDir.absolutePath
 
-        boolean jdk9 = false;
+        boolean jdk9 = false
         try {
             jdk9 = new BigDecimal(System.getProperty("java.specification.version")).compareTo(new BigDecimal("9.0")) >= 0
         } catch (e) {
@@ -61,10 +61,6 @@ public class ExtensionModuleHelperForTests {
                         cp.each {
                             pathelement location: it
                         }
-                    }
-                    if (jdk9) {
-                        jvmarg(value: '--add-modules')
-                        jvmarg(value: 'java.xml.bind')
                     }
                 }
             }
